old-JOM-files/kv_versioned_docs/version-2.9.0/configuring/active-anti-entropy/index.md
---
title: "Active Anti-Entropy"
sidebar_position: 210
sidebar_label: Active Anti-Entropy (AAE)
pagination_label: "Active Anti-Entropy"
hide_table_of_contents: true
last_update:
  author: RiakDocs
  date: 2019-11-21
---
import RiakDocsNote from '@site/src/components/RiakDocs/RiakDocsNote';


[config legacy]: ./legacy-aae/
[config tictac]: ./tictac-aae/
[config tictac-repl]: ../next-gen-replication/
[using aaefold]: ../../using/cluster-operations/tictac-aae-fold/
[learn aae]: ../../learn/concepts/active-anti-entropy/

Riak's [active anti-entropy][learn aae] \(AAE) subsystem is a set of background processes that repair object inconsistencies stemming from missing or divergent object values across nodes. Riak operators can turn AAE on and off and configure and monitor its functioning.

Both Legacy and TicTac AAE systems can be used seperately or together.

If you are using the legacy AAE system, it is recommended that you migrate to the TicTac AAE system.

## TicTac AAE system

The version of TicTac AAE included in 2.9 releases is a working prototype with limited testing. The intention is to full integrate the library into the KV 3.0 release.

TicTac Active Anti-Entropy makes two changes to the way Anti-Entropy has previously worked in Riak. The first change is to the way Merkle Trees are contructed so that they are built incrementally. The second change allows the underlying Anti-entropy key store to be key-ordered while still allowing faster access to keys via their Merkle tree location or the last modified date of the object.

#### [Configuring TicTac AAE][config tictac]

A guide covering commonly adjusted parameters for the TicTac AAE system.

[Learn More >>][config tictac]

#### Other documentation

## Legacy AAE system

The legacy AAE system is still present, and works exactly as before.

### [Configuring Legacy AAE][config legacy]

A guide covering commonly adjusted parameters for the legacy AAE system.

[Learn More >>][config legacy]

